Added givenStories supporting